src/main/kotlin/com/example/hierarchical_infolearn/global/error/common/InvalidParameterException.kt
package com.example.hierarchical_infolearn.global.error.common

import com.example.hierarchical_infolearn.global.error.ErrorCode
import com.example.hierarchical_infolearn.global.error.data.GlobalException

object InvalidParameterException: GlobalException(ErrorCode.INVALID_PARAMETER)